--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
       href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300i,400,400i,600,600i,700,700i"
       rel="stylesheet"
     />
+    <link rel="shortcut icon" href="images/handwave.png" />
     <link
       href="https://fonts.googleapis.com/css?family=Catamaran:200,300,400,500,600,700"
       rel="stylesheet"
